--- a/src/renderer/pages/WorkspaceSettings/components/Members/styles.module.sass
+++ b/src/renderer/pages/WorkspaceSettings/components/Members/styles.module.sass
@@ -6,6 +6,7 @@
 // --------------------------------------------------------------
 
 .members.dark
+  color: $white
   header
     button
       &:last-child
@@ -97,7 +98,77 @@
 
     max-height: calc( 100vh - 120px )
 
-    >div
-      min-height: calc( 100vh - 620px )
+    .participantContainer
+      @include flex(flex-start, space-around, row)
+      width: 100%
+      height: 100%
+      margin-top: 3rem
 
-    
+
+      .participants
+        @include flex(center, center, column)
+        width: 100%
+
+        .title
+          @include flex(center, center, row)
+          width: 100%
+          position: relative
+
+          &::before
+            content: ''
+            position: absolute
+            bottom: -.5rem
+            width: 100%
+            height: 1px
+            background-color: $gray-500
+
+          
+          span
+            color: $gray-500
+            &:first-child
+              flex: 2
+            &:last-child
+              width: 170px
+              
+        .participant
+          @include flex(center, center, row)
+          width: 100%
+          margin-top: 1.5rem
+          position: relative
+
+          &::before
+            content: ''
+            position: absolute
+            bottom: -.5rem
+            width: 100%
+            height: 1px
+            background-color: $gray-700
+
+          h4
+            @include flex(center, flex-start, row)
+            gap: .5rem
+            flex: 2
+            width: 100%
+            font-weight: 400
+
+            .tooltip
+              background-color: $gray-500
+            svg
+              font-size: 1rem
+              color: $yellow-100
+                
+          div
+            flex: 1
+            max-width: 180px
+
+            div
+              &:nth-child(2)
+                div
+                  &:last-child
+                    color: $red-100 !important
+                    transition: color 0.2s ease, background-color 0.2s ease
+                    &:hover
+                      color: $white !important
+                      background-color: $red-100 !important
+                      
+      
