--- a/src/renderer/pages/Workspace/ViewSafeBox/HeaderSafeBox/styles.module.sass
+++ b/src/renderer/pages/Workspace/ViewSafeBox/HeaderSafeBox/styles.module.sass
@@ -39,6 +39,10 @@ header
   width: 100%
   gap: 1rem
 
+  .red
+    background-color: $red-100 !important
+    &:hover
+      background-color: $red-100-hover !important
   .actions
     @include flex(flex-start, flex-end, row)
     width: 100%
@@ -49,14 +53,14 @@ header
       @include flex(center, center, row)
       gap: .5rem
       padding: .5rem 1rem
-      border-radius: 5rem
+      border-radius: $default-radius
       transition: background-color 0.2s ease
 
   .title
     @include flex(flex-start, flex-start, row)
     width: 100%
     height: 100%
-    gap: 2rem
+    gap: 1rem
     position: relative
 
     &::before
@@ -68,11 +72,14 @@ header
       bottom: -1rem
 
     svg
-      min-width: 80px
-      min-height: 80px
+      min-width: 70px
+      min-height: 70px
 
     .description
       padding: .5rem 0
+      p
+        color: $gray-500
+
 
   .dropdown
     @include flex(center, center, row)
