--- a/src/renderer/pages/Workspace/ViewSafeBox/MainSafeBox/Users/styles.module.sass
+++ b/src/renderer/pages/Workspace/ViewSafeBox/MainSafeBox/Users/styles.module.sass
@@ -55,24 +55,61 @@
     height: 100%
     margin-top: 3rem
 
-    ul
-      margin-top: 1rem
-    
-    li
-      @include flex(center, flex-start, row)
-      gap: .5rem
-      margin-top: .5rem
 
-      button
+    .participants
+      @include flex(center, center, column)
+      width: 100%
+
+      .title
         @include flex(center, center, row)
-        width: 20px
-        height: 20px
-        font-size: 1rem
-        border-radius: 5rem
-        background-color: $red-100
-        color: $white
-        
-        transition: background-color 0.2s ease
+        width: 100%
+        position: relative
 
-        &:hover
-          background-color: $red-100-hover
+        &::before
+          content: ''
+          position: absolute
+          bottom: -.5rem
+          width: 100%
+          height: 1px
+          background-color: $gray-500
+
+        
+        span
+          color: $gray-500
+          &:first-child
+            flex: 2
+          &:last-child
+            width: 170px
+            
+      .participant
+        @include flex(center, center, row)
+        width: 100%
+        margin-top: 1.5rem
+        position: relative
+
+        &::before
+          content: ''
+          position: absolute
+          bottom: -.5rem
+          width: 100%
+          height: 1px
+          background-color: $gray-500
+
+        h4
+          flex: 2
+          width: 100%
+          font-weight: 400
+        div
+          flex: 1
+          max-width: 180px
+
+          div
+            &:nth-child(2)
+              div
+                &:last-child
+                  color: $red-100 !important
+                  transition: color 0.2s ease, background-color 0.2s ease
+                  &:hover
+                    color: $white !important
+                    background-color: $red-100 !important
+                    
