--- a/src/renderer/components/Dropdown/styles.module.sass
+++ b/src/renderer/components/Dropdown/styles.module.sass
@@ -3,16 +3,16 @@
 // ---------------------------- THEME ---------------------------
 // --------------------------------------------------------------
 
-.dark
+.dropdown.dark
+  background-color: $gray-700 
   .option
-    background-color: $gray-700
+    background-color: $gray-700 
     color: $white
     >div
       &:hover
-        background-color: $gray-500 !important
+        background-color: $gray-500 
 
   .input
-    background-color: $gray-900
     input
       color: $white
 
@@ -40,16 +40,18 @@
 // --------------------------------------------------------------
 
 .dropdown
-  @include flex(center, center, row)
+  @include flex(flex-start, center, row)
   width: 100%
   height: 100%
   gap: 2rem
   position: relative
   color: $black
+  border-radius: $default-radius
 
   svg
     min-width: 80px
     min-height: 80px
+    margin-top: 14px
 
   div
     transition: background-color 0.2s ease
@@ -72,32 +74,30 @@
 
   .option
     position: absolute
-    top: 45px
+    top: 65px
     right: 0
     border-radius: 10px
     overflow: hidden
     transition: opacity 0.2s, visibility 0.2s
     opacity: 0
     visibility: hidden
-    margin-top: 15px
     z-index: 400 !important
-
-    @media (max-width: 1080px)
-      margin-top: 10px
 
     div
       padding: 12px 20px
       cursor: pointer
-  
+
+  .option.noText
+    top: 50px 
+
 .inputContainer
   @include flex(center, center, row)
   width: 100%
 
+
   .input
     @include flex(flex-start, center, column)
     border-radius: $default-radius
-    max-height: 57px
-    max-width: 170px
     position: relative
 
 
@@ -114,18 +114,20 @@
 
     span
       position: relative
-      font-size: .8rem
+      font-size: .85rem
       padding: 0 .7rem
-      top: 5px
+      margin-top: 5px
+      height: 12px
       color: $gray-500
-      font-weight: 500
-      text-transform: uppercase
 
     input
       width: 100%
-      padding: .6rem .7rem
+      padding: 2px 10px
       border-radius: $default-radius
       font-size: .85rem
-      margin-top: -5px
+      height: 40px
       transition: background-color 0.2s ease
 
+  .noText
+    svg
+      top: -7px
