--- a/src/renderer/components/Modals/FieldModalWithDropdown/styles.module.sass
+++ b/src/renderer/components/Modals/FieldModalWithDropdown/styles.module.sass
@@ -2,6 +2,7 @@
 
 
 .reactModalContent.dark
+  color: $white
   background-color: $gray-900
   h2
     color: $white
@@ -65,7 +66,9 @@
   form
     @include flex(center, center ,column)
     gap: 2rem
-
+    height: 100%
+    width: 100%
+    
     .buttons
       @include flex(center, center ,column)
       width: 100%
