--- a/src/renderer/components/Modals/VerifyNameModal/styles.module.sass
+++ b/src/renderer/components/Modals/VerifyNameModal/styles.module.sass
@@ -13,7 +13,7 @@
         background-color: $gray-600
   .buttonCancel
     &:hover
-        background-color: $red-100-hover
+      background-color: $red-100-hover !important
 
 .reactModalContent.light
   background-color: $white
@@ -28,7 +28,8 @@
   .buttonCancel
     color: $white
     &:hover
-      background-color: $red-100-hover
+      background-color: $red-100-hover !important
+
 .reactModalOverlay
   @include flex(center, center ,column)
   z-index: 4000
@@ -46,7 +47,7 @@
   @include flex(center, center ,column)
   width: 100%
   height: 100%
-  max-height: 550px
+  max-height: 500px
   max-width: 450px
   padding: 3rem
   position: relative
@@ -54,13 +55,15 @@
   gap: 1rem
 
   h2
-    font-weight: 600
+    font-weight: 400
     text-align: center
-    font-size: 1.3rem
+    font-size: 1.1rem
 
     &:nth-child(2)
-      margin-top: -1.5rem
+      margin-top: -1.2rem
       text-transform: none
+      margin-bottom: 1rem
+      text-decoration: underline
 
   form
     @include flex(center, center ,column)
@@ -70,10 +73,9 @@
       @include flex(center, center ,column)
       width: 100%
       gap: 1rem
-      margin-top: 5rem
+      margin-top: 3rem
 
       button
-        font-weight: 500
         width: 300px
         height: 45px
         border-radius: $default-radius
