--- a/src/renderer/pages/WorkspaceSettings/components/Members/styles.module.sass
+++ b/src/renderer/pages/WorkspaceSettings/components/Members/styles.module.sass
@@ -9,11 +9,10 @@
   color: $white
   header
     button
-      &:last-child
-        background-color: $gray-700
-        color: $white
-        &:hover
-          background-color: $gray-600
+      background-color: $gray-700
+      color: $white
+      &:hover
+        background-color: $gray-600
 
   .actions
     button
@@ -21,40 +20,21 @@
       background-color: $gray-700
 
   main
-    .title
-      &::before
-        background-color: $gray-700
-    .info
-      color: $white
-
-      .img
-        background-color: $gray-700
-    button
-      background-color: $gray-700
-      color: $white
+    .participantContainer
+      @include scroolbarDark()
+      
+   
 
 .members.light
   header
     button
-      &:last-child
-        background-color: $gray-300
+      background-color: $gray-300
   .actions
     button
       background-color: $gray-300
   main
-    .title
-      &::before
-        background-color: $gray-400
-
-    .info
-      color: $black
-      
-      .img
-        background-color: $gray-300 
-
-    button
-      background-color: $gray-300
-      color: $black
+    .participantContainer
+      @include scroolbarLight()
 
 
 .members
@@ -64,111 +44,125 @@
 
   padding: 1rem
 
-  header
-    @include flex(center, space-between, row)
-    width: 100%
 
-    .participantButton
-      @include flex(center, center, row)
-      gap: .5rem
-      svg
-        font-size: 1rem
-      &:last-child
-        padding: .5rem 1rem
-        border-radius: $default-radius
-
-        transition: background-color 0.2s ease
-
-    .actions
-      button
-        padding: .5rem 1rem
-        border-top-left-radius: $default-radius
-        border-top-right-radius: $default-radius
-
-        transition: background-color 0.2s ease, color 0.2s ease
-
-        &.selected 
-          background-color: $blue-100
-          color: $white
-
-  main
+  .membersContainer
     @include flex(center, center, column)
+    max-width: 1100px
     width: 100%
     height: 100%
+    
+    header
+      @include flex(center, space-between, row)
+      width: 100%
 
-    max-height: calc( 100vh - 120px )
+      .participantButton
+        @include flex(center, center, row)
+        gap: .5rem
+        border-radius: $default-radius
+        padding: .5rem 1rem
 
-    .participantContainer
-      @include flex(flex-start, space-around, row)
+        transition: background-color 0.2s ease
+        svg
+          font-size: 1rem
+        &:last-child
+          padding: .5rem 1rem
+          border-radius: $default-radius
+
+          transition: background-color 0.2s ease
+
+      .search
+        margin-top: .5rem
+        width: 300px
+
+        input
+          height: 35px
+          font-size: .9rem
+
+    main
+      @include flex(center, center, column)
       width: 100%
       height: 100%
-      margin-top: 3rem
 
+      max-height: calc( 100vh - 120px )
 
-      .participants
-        @include flex(center, center, column)
+      .participantContainer
+        @include flex(flex-start, space-around, row)
         width: 100%
+        height: 100%
+        margin-top: 3rem
 
-        .title
-          @include flex(center, center, row)
+        overflow: auto
+
+
+        .participants
+          @include flex(center, center, column)
           width: 100%
-          position: relative
 
-          &::before
-            content: ''
-            position: absolute
-            bottom: -.5rem
+          .title
+            @include flex(center, center, row)
             width: 100%
-            height: 1px
-            background-color: $gray-500
+            position: relative
 
-          
-          span
-            color: $gray-500
-            &:first-child
-              flex: 2
-            &:last-child
-              width: 170px
-              
-        .participant
-          @include flex(center, center, row)
-          width: 100%
-          margin-top: 1.5rem
-          position: relative
-
-          &::before
-            content: ''
-            position: absolute
-            bottom: -.5rem
-            width: 100%
-            height: 1px
-            background-color: $gray-700
-
-          h4
-            @include flex(center, flex-start, row)
-            gap: .5rem
-            flex: 2
-            width: 100%
-            font-weight: 400
-
-            .tooltip
+            &::before
+              content: ''
+              position: absolute
+              bottom: -.5rem
+              width: 100%
+              height: 1px
               background-color: $gray-500
-            svg
-              font-size: 1rem
-              color: $yellow-100
-                
-          div
-            flex: 1
-            max-width: 180px
 
-            div
-              &:nth-child(2)
-                div
-                  &:last-child
-                    color: $red-100 !important
-                    transition: color 0.2s ease, background-color 0.2s ease
-                    &:hover
-                      color: $white !important
-                      background-color: $red-100 !important
-                      
-      
+            
+            span
+              color: $gray-500
+              &:first-child
+                flex: 2
+              &:last-child
+                width: 170px
+                
+          .participant
+            @include flex(center, center, row)
+            width: 100%
+            margin-top: 1.5rem
+            position: relative
+
+            &::before
+              content: ''
+              position: absolute
+              bottom: -.5rem
+              width: 100%
+              height: 1px
+              background-color: $gray-700
+
+            h4
+              @include flex(center, flex-start, row)
+              gap: .5rem
+              font-size: .87rem
+              flex: 2
+              width: 100%
+              font-weight: 400
+
+              .tooltip
+                background-color: $gray-500
+
+              svg
+                font-size: 1rem
+                color: $yellow-100
+
+            .dropDown
+              margin-right: 5px
+              background-color: transparent !important
+              flex: 1
+              max-width: 180px
+
+
+              div
+                &:nth-child(2)
+                  div
+                    &:last-child
+                      color: $red-100 !important
+                      transition: color 0.2s ease, background-color 0.2s ease
+                      &:hover
+                        color: $white !important
+                        background-color: $red-100 !important
+                        
+        
