--- a/src/renderer/styles/global.sass
+++ b/src/renderer/styles/global.sass
@@ -4,8 +4,8 @@
 // @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap')
 
 @font-face 
-    font-family: Helvetica
-    src: url(FreeSans.ttf)
+  font-family: Helvetica
+  src: url(FreeSans.ttf)
 
 *
   margin: 0
@@ -14,6 +14,7 @@
 
 html
   height: 100%
+  font-family: arial
 
 // @media (max-width: 1080px)
 //   html
@@ -23,9 +24,10 @@ html
 //   html
 //     font-size: 87.5%
 
+
 body, input, textarea, select, button
-  font-family: Helvetica, sans-serif
-  font-size: .85rem
+  //font-family: arial
+  font-size: .9rem
 
 
 body
