--- a/src/renderer/styles/_util.sass
+++ b/src/renderer/styles/_util.sass
@@ -26,7 +26,7 @@ $gray-700: #353739
 $gray-800: #262626
 $gray-900: #1F1F1F
 
-$default-radius: .5rem
+$default-radius: 5px
 
 @mixin flex($align, $justify, $direction)
   display: flex
