--- a/src/renderer/pages/WorkspaceSettings/components/Members/styles.module.sass
+++ b/src/renderer/pages/WorkspaceSettings/components/Members/styles.module.sass
@@ -1,6 +1,5 @@
 @use '../../../../styles/_util' as *
 
-
 // --------------------------------------------------------------
 // ---------------------------- THEME ---------------------------
 // --------------------------------------------------------------
@@ -22,8 +21,14 @@
   main
     .participantContainer
       @include scroolbarDark()
-      
-   
+      .participants
+        .title
+          &::before
+            background-color: $gray-700 
+
+        .participant
+          &::before
+            background-color: $gray-700
 
 .members.light
   header
@@ -35,7 +40,14 @@
   main
     .participantContainer
       @include scroolbarLight()
+      .participants
+        .title
+          &::before
+            background-color: $gray-200
 
+        .participant
+          &::before
+            background-color: $gray-200
 
 .members
   @include flex(center, flex-start, column)
@@ -109,7 +121,6 @@
               bottom: -.5rem
               width: 100%
               height: 1px
-              background-color: $gray-500
 
             
             span
@@ -131,7 +142,7 @@
               bottom: -.5rem
               width: 100%
               height: 1px
-              background-color: $gray-700
+              // 
 
             h4
               @include flex(center, flex-start, row)
@@ -140,9 +151,6 @@
               flex: 2
               width: 100%
               font-weight: 400
-
-              .tooltip
-                background-color: $gray-500
 
               svg
                 font-size: 1rem
@@ -160,7 +168,7 @@
                   div
                     &:last-child
                       color: $red-100 !important
-                      transition: color 0.2s ease, background-color 0.2s ease
+                      transition: color 0.3s ease, background-color 0.3s ease
                       &:hover
                         color: $white !important
                         background-color: $red-100 !important
