--- a/src/renderer/pages/WorkspaceSettings/components/Sidebar/styles.module.sass
+++ b/src/renderer/pages/WorkspaceSettings/components/Sidebar/styles.module.sass
@@ -6,6 +6,7 @@
 
 .sidebar.dark
   border-right: 1px solid $gray-700
+  color: $white
   main
     ul
       li
@@ -14,6 +15,7 @@
   
 .sidebar.light
   border-right: 1px solid $gray-400
+  color: $black
 
   main
     ul
@@ -27,21 +29,24 @@
 
 .sidebar
   @include flex(flex-start, flex-start, column)
-  width: 250px
-  min-width: 250px
-  height: 100%
-  gap: 2rem
-  padding: 1rem
+  width: 230px
+  min-width: 230px
+  height: calc( 100vh - 50px )
+
+  padding: 7px
 
   header
     @include flex(center, center, column)
     gap: 1rem
 
     img
-      width: 125px
-      height: 125px
+      width: 100px
+      height: 100px
       border-radius: 5rem
       object-fit: contain
+
+    h3
+      font-size: 1.2rem
 
   main
     @include flex(flex-start, flex-start, row)
@@ -53,18 +58,18 @@
 
       li
         width: 100%
-        margin-top: 2px
+        margin-top: 1px
 
         button
           @include flex(center, flex-start, row)
           width: 100%
           gap: 1rem
-          padding: .3rem .5rem
-          border-radius: $default-radius
+          padding: .3rem .7rem
+          border-radius: 5px
           transition: background-color 0.2s ease, color 0.2s ease
 
           svg
-            font-size: 1.3rem
+            font-size: 1.2rem
 
           &:hover
             background-color: $blue-100
@@ -72,3 +77,19 @@
           &.selected
             background-color: $blue-100
             color: $white
+
+  footer
+    @include flex(flex-start, center, row)
+    width: 100%
+
+    height: 200px
+
+    button
+      background-color: $red-100
+      border-radius: $default-radius
+      width: 100%
+
+      height: 30px
+      &:hover
+        background-color: $red-100-hover
+
