--- a/src/renderer/pages/Workspace/styles.module.sass
+++ b/src/renderer/pages/Workspace/styles.module.sass
@@ -109,7 +109,7 @@
           border-radius: $default-radius
           height: 35px
           width: 100%
-          padding: 0 2.4rem
+          padding:  0 .5rem 0 2.3rem
 
         svg
           position: absolute
@@ -134,7 +134,7 @@
         width: 200px
         z-index: 2003
         top: 60px
-        left: 315px
+        left: 235px
         border-radius: .3rem
         transition: opacity 0.1s ease, visibility 0.1s ease
         border: 1px solid $white
