--- a/src/renderer/pages/WorkspaceSettings/components/Members/styles.module.sass
+++ b/src/renderer/pages/WorkspaceSettings/components/Members/styles.module.sass
@@ -71,16 +71,12 @@
         @include flex(center, center, row)
         gap: .5rem
         border-radius: $default-radius
-        padding: .5rem 1rem
+        padding: .3rem 1rem
 
         transition: background-color 0.2s ease
         svg
+          margin-bottom: 2px
           font-size: 1rem
-        &:last-child
-          padding: .5rem 1rem
-          border-radius: $default-radius
-
-          transition: background-color 0.2s ease
 
       .search
         margin-top: .5rem
