--- a/src/renderer/components/Inputs/InputEye/styles.module.sass
+++ b/src/renderer/components/Inputs/InputEye/styles.module.sass
@@ -23,7 +23,9 @@
     svg
       color: $black
 
-    
+.red
+  svg
+    color: $red-100 !important
 // --------------------------------------------------------------
 // -------------------------- SETTINGS --------------------------
 // --------------------------------------------------------------
@@ -37,6 +39,7 @@
     border-radius: $default-radius
     max-height: 57px
     position: relative
+
     span
       position: relative
       font-size: .8rem
@@ -55,13 +58,29 @@
       margin-top: -5px
 
     .eye
+      @include flex(center, center, row)
+      gap: 8px
       position: absolute
       right: 20px
 
+
       button
+        @include flex(center, center, row)
         font-size: 1.3rem
         margin-top: 5px
+        height: 35px
+        width: 35px
+        border-radius: 100px
 
+        font-size: 1.1rem
+
+        transition: background-color 0.2s ease
+
+        &:hover
+          background-color: $gray-800
+      
+
+        
 .notValid
   span
     color: $red-100 !important
