--- a/src/renderer/styles/_util.sass
+++ b/src/renderer/styles/_util.sass
@@ -21,8 +21,9 @@ $gray-300: #E4E5E9
 $gray-400: #CDCDCD
 $gray-500: #767676
 $gray-600: #505355
-$gray-650: #555555
+$gray-650: #353739
 $gray-700: #353739
+$gray-750: #2e2e2e
 $gray-800: #262626
 $gray-900: #1F1F1F
 
