--- a/src/renderer/components/NewSidebar/WorkspaceMenu/styles.module.sass
+++ b/src/renderer/components/NewSidebar/WorkspaceMenu/styles.module.sass
@@ -10,7 +10,7 @@
         color: $white
     >button
       &:hover
-        background-color: $gray-600
+        background-color: $gray-700
     .menuCreate
       background-color: $gray-750
       color: $gray-100
@@ -81,9 +81,10 @@
 
       .icon
         @include flex(center, flex-start, row)
-        width: 100%
         transition: background-color 0.2s ease
-        
+        width: 100%
+        padding: 0 .5rem
+
         &:hover
           background-color: $gray-700
 
