--- a/src/renderer/pages/Workspace/ViewSafeBox/MainSafeBox/styles.module.sass
+++ b/src/renderer/pages/Workspace/ViewSafeBox/MainSafeBox/styles.module.sass
@@ -28,6 +28,8 @@
       position: relative
       font-weight: 500
       font-size: .9rem
+      &:nth-child(2)
+        min-width: 130px
       &::before
         content: ''
         position: absolute
@@ -40,6 +42,14 @@
         &::before
           width: 100%
 
+    .addParticipantButton
+      background-color: $gray-700
+      max-width: 200px
+      margin-left: auto
+      &:hover
+        background-color: $gray-600
+        &::before
+          width: 0 !important
     .selected
       position: relative
       &::before
