--- a/src/renderer/styles/_util.sass
+++ b/src/renderer/styles/_util.sass
@@ -7,7 +7,10 @@ $blue-200: #4D8EFF
 $red-100: #DD4C4C
 $red-100-hover: #8d3131
 
+$green-100-op-50:  #05cf607e
 $green-100: #05CF60
+$green-100-hover: #04a14b
+
 
 $yellow-100: #ece332
 
