--- a/src/renderer/components/Dropdown/styles.module.sass
+++ b/src/renderer/components/Dropdown/styles.module.sass
@@ -5,24 +5,20 @@
 
 .dropdown.dark
   background-color: $gray-700 
+  color: $white
+  &:hover
+    background-color: $gray-600 
+
   .option
     background-color: $gray-700 
     color: $white
+
     >div
       &:hover
-        background-color: $gray-500 
-
-  .input
-    input
-      color: $white
-
-      &:hover
-        background-color: $gray-700
-
+        background-color: $gray-600 
 
 .dropdown.light
   background-color: $gray-100
-  
   .option
     background-color: $gray-100
     >div
@@ -41,33 +37,61 @@
 // --------------------------------------------------------------
 
 .dropdown
-  @include flex(flex-start, center, row)
+  @include flex(center, center, row)
   width: 100%
   height: 100%
   gap: 2rem
   position: relative
   color: $black
   border-radius: $default-radius
-
-  svg
-    min-width: 80px
-    min-height: 80px
-    margin-top: 14px
-
-  div
-    transition: background-color 0.2s ease
-    width: 100%
-
-  input
-    @include flex(center, center, row)
-    height: 45px
-    cursor: pointer
-    width: 100%
-    background: transparent
+  height: 40px
 
   .input
+    @include flex(flex-start, center, row)
     border-radius: $default-radius
-    z-index: 300
+    border-radius: $default-radius
+    height: 100%
+    
+    .inputContainer
+      @include flex(center, center, row)
+      width: 100%
+      height: 100%
+      position: relative
+
+      svg
+        position: absolute
+        margin-top: 13px
+        right: 5px
+        min-width: 25px
+        min-height: 25px
+        font-size: 3px !important
+        color: $gray-500
+        pointer-events: none
+        
+
+      // span
+      //   position: relative
+      //   font-size: .85rem
+      //   padding: 0 .7rem
+      //   margin-top: 5px
+      //   height: 12px
+      //   color: $gray-500
+
+      input
+        width: 100%
+        height: 100%
+
+        padding: 0 10px
+        font-size: .85rem
+        
+        background: transparent
+        transition: background-color 0.2s ease
+        cursor: pointer
+        border-radius: $default-radius
+
+    .noText
+      svg
+        top: -7px
 
   .input:focus-within ~ .option
     opacity: 1
@@ -75,7 +99,9 @@
 
   .option
     position: absolute
+    width: 100%
     top: 65px
+    font-size: 0.85rem
     right: 0
     border-radius: $default-radius
     overflow: hidden
@@ -91,46 +117,8 @@
     div
       padding: 10px 20px
       cursor: pointer
+      transition: background-color 0.2s ease
 
   .option.noText
     top: 50px 
 
-.inputContainer
-  @include flex(center, center, row)
-  width: 100%
-
-  .input
-    @include flex(flex-start, center, column)
-    border-radius: $default-radius
-    position: relative
-
-    svg
-      position: absolute
-      right: 5px
-      min-width: 30px !important
-      min-height: 30px !important
-      font-size: 3px !important
-      color: $gray-500
-      top: 1px
-      pointer-events: none
-      z-index: 400
-
-    span
-      position: relative
-      font-size: .85rem
-      padding: 0 .7rem
-      margin-top: 5px
-      height: 12px
-      color: $gray-500
-
-    input
-      width: 100%
-      padding: 2px 10px
-      border-radius: $default-radius
-      font-size: .85rem
-      height: 40px
-      transition: background-color 0.2s ease
-
-  .noText
-    svg
-      top: -7px
