--- a/src/renderer/components/Sidebar/styles.module.sass
+++ b/src/renderer/components/Sidebar/styles.module.sass
@@ -6,7 +6,8 @@
 // --------------------------------------------------------------
 
 .sidebar.dark
-  background-color: #262626
+  background-color: $gray-800
+
 .sidebar.light
   background-color: $gray-300
 
@@ -19,8 +20,7 @@
   height: 100vh
   width: 70px
   padding: 1rem 0
-  border-bottom-right-radius: 4rem
-  border-top-right-radius: 4rem
+
   z-index: 20
   position: relative
 
