--- a/src/renderer/components/NewSidebar/WorkspaceMenu/styles.module.sass
+++ b/src/renderer/components/NewSidebar/WorkspaceMenu/styles.module.sass
@@ -74,6 +74,7 @@
   .search
     @include flex(center, center, row)
     gap: .5rem
+    margin-top: 48px
     width: 100%
     padding: .5rem
     position: relative
