--- a/src/renderer/components/Sidebar/Icon/styles.module.sass
+++ b/src/renderer/components/Sidebar/Icon/styles.module.sass
@@ -5,8 +5,8 @@
   &::before
     visibility: visible
     opacity: 1
-    height: 25px
-    left: -22px
+    height: 40px
+    left: -24px
 
 .icon
   @include flex(center, center, row)
@@ -19,13 +19,12 @@
   &::before
     content: ''
     position: absolute
-    border-radius: 5rem
-    left: -27px
-    height: 30px
-    border-width: 0 3px 3px 0
+    border-radius: $default-radius
+    left: -30px
+    height: 20px
     display: inline-block
     padding: 10px
-    background-color: $blue-100
+    background-color: $white
     visibility: none
     opacity: 1
     transition: all 0.2s ease
@@ -34,21 +33,21 @@
   &:hover::before
     visibility: visible
     opacity: 1
-    height: 25px
-    left: -22px
+    height: 40px
+    left: -24px
 
   button
     p
       @include flex(center, center, row)
       background-color: $blue-100
-      height: 55px
-      width: 55px
+      height: 50px
+      width: 50px
       border-radius: 5rem
-      font-size: 1rem
+      font-size: .85rem
       color: $white
 
     img
-      width: 55px
-      height: 55px
+      width: 50px
+      height: 50px
       border-radius: 5rem
 
