--- a/src/renderer/components/Sidebar/styles.module.sass
+++ b/src/renderer/components/Sidebar/styles.module.sass
@@ -19,6 +19,7 @@
   @include flex(center, flex-start, column)
   height: 100vh
   width: 70px
+  min-width: 70px
   padding: 1rem 0
 
   z-index: 20
