--- a/src/renderer/components/Buttons/Button/styles.module.sass
+++ b/src/renderer/components/Buttons/Button/styles.module.sass
@@ -1,11 +1,15 @@
 @use '../../../styles/_util' as *
 
 .button.dark
+  svg
+    color: $white
   button
     background-color: $gray-700
     &:hover
       background-color: $gray-600
 .button.light
+  svg
+    color: $black
   button
     background-color: $gray-300
     &:hover
