--- a/src/renderer/pages/Workspace/ViewSafeBox/HeaderSafeBox/styles.module.sass
+++ b/src/renderer/pages/Workspace/ViewSafeBox/HeaderSafeBox/styles.module.sass
@@ -10,6 +10,9 @@
   .title
     color: $white
 
+    &::before
+      background-color: $gray-700
+
   .dropdown
     .option
       background-color: $gray-700
@@ -25,7 +28,9 @@
       background-color: $gray-100
       &:hover
         background-color: $gray-400
-
+  .title
+    &::before
+      background-color: $gray-300
   .dropdown
     .option
       background-color: $gray-100
@@ -41,20 +46,17 @@ header
 
   .red
     background-color: $red-100 !important
+    color: $white !important
+    svg
+      color: $white !important
     &:hover
       background-color: $red-100-hover !important
   .actions
     @include flex(flex-start, flex-end, row)
     width: 100%
+    max-width: 450px
     gap: 1rem
-    margin-right: 50px
-
-    button
-      @include flex(center, center, row)
-      gap: .5rem
-      padding: .3rem 1rem
-      border-radius: $default-radius
-      transition: background-color 0.2s ease
+    margin-left: auto
 
   .title
     @include flex(flex-start, flex-start, row)
@@ -68,7 +70,6 @@ header
       position: absolute
       width: 100%
       height: 1px
-      background-color: $gray-300
       bottom: -1rem
 
     svg
