--- a/src/renderer/components/Dropdown/styles.module.sass
+++ b/src/renderer/components/Dropdown/styles.module.sass
@@ -71,7 +71,7 @@
 
       // span
       //   position: relative
-      //   font-size: .85rem
+      //   
       //   padding: 0 .7rem
       //   margin-top: 5px
       //   height: 12px
@@ -82,7 +82,7 @@
         height: 100%
 
         padding: 0 10px
-        font-size: .85rem
+        
         
         background: transparent
         transition: background-color 0.2s ease
