--- a/src/renderer/pages/Workspace/ViewSafeBox/MainSafeBox/AddParticipantModal/styles.module.sass
+++ b/src/renderer/pages/Workspace/ViewSafeBox/MainSafeBox/AddParticipantModal/styles.module.sass
@@ -64,18 +64,16 @@
     padding: 1rem .5rem
     gap: 1rem
 
-    .selected
-      background-color: $green-100-op-50 
     
     .user
       @include flex(center, space-between, column)
       position: relative
       width: 100%
-      transition: background-color 0.4s ease
-
 
       padding: .5rem 1rem
       border-radius: $default-radius
+
+      transition: background-color 0.4s ease
 
       &::before
         content: ''
@@ -88,7 +86,6 @@
 
       >button
         @include flex(center, center, row)
-        width: 100%
         width: 30px
         height: 30px
         border-radius: $default-radius
@@ -99,9 +96,15 @@
         max-width: 150px
         border: 1px solid $gray-600
 
+      .selected
+        background-color: $green-100-op-50 
+        
       .header
         @include flex(center, space-between, row)
         width: 100%
+        padding: .5rem 1rem
+
+        border-radius: $default-radius
 
         button
           @include flex(center, center, row)
@@ -115,23 +118,25 @@
           font-size: 1.2rem
 
       .content
-        @include flex(flex-end, space-between, row)
-        gap: 1rem
+        @include flex(center, center, column)
+        gap: 3rem
+
         width: 100%
         opacity: 0
         visibility: hidden
         height: 0
         padding: 0 1rem
 
-        transition: opacity 0.2s ease, visibility 0.2s ease, height 0.4s ease
-
-        >div
-          max-width: 120px
+        transition: opacity 0.2s ease, visibility 0.2s ease, height 0.3s ease, margin-top 0.2s ease
+          
+        button
+          &:last-child
+            max-width: 200px
 
         .permission
-          @include flex(center, center, row)
+          @include flex(center, space-between, row)
           gap: 1rem
-          max-width: 280px
+          width: 100%
 
           >div
             height: 35px
@@ -139,9 +144,9 @@
           button
             height: 45px
 
-
       .content.visible
+        margin-top: 1rem
         opacity: 1
         visibility: visible
-        height: 80px
+        height: 120px
         
