--- a/src/renderer/pages/Workspace/ViewSafeBox/MainSafeBox/Users/styles.module.sass
+++ b/src/renderer/pages/Workspace/ViewSafeBox/MainSafeBox/Users/styles.module.sass
@@ -2,8 +2,25 @@
 
 .users.dark
   color: $white
+
+  .title 
+    &::before
+      background-color: $gray-600
+      
+  .participant
+    &::before
+      background-color: $gray-600
+
 .users.light
   color: $black
+
+  .title
+    &::before
+      background-color: $gray-500
+
+  .participant
+    &::before
+      background-color: $gray-500
 
 .users
   @include flex(center, center, column)
@@ -71,7 +88,6 @@
           bottom: -.5rem
           width: 100%
           height: 1px
-          background-color: $gray-500
 
         
         span
@@ -93,8 +109,7 @@
           bottom: -.5rem
           width: 100%
           height: 1px
-          background-color: $gray-500
-
+          
         h4
           flex: 2
           width: 100%
