--- a/src/renderer/pages/WorkspaceSettings/components/Members/styles.module.sass
+++ b/src/renderer/pages/WorkspaceSettings/components/Members/styles.module.sass
@@ -6,18 +6,6 @@
 
 .members.dark
   color: $white
-  header
-    button
-      background-color: $gray-700
-      color: $white
-      &:hover
-        background-color: $gray-600
-
-  .actions
-    button
-      color: $white
-      background-color: $gray-700
-
   main
     .participantContainer
       @include scroolbarDark()
@@ -31,12 +19,6 @@
             background-color: $gray-700
 
 .members.light
-  header
-    button
-      background-color: $gray-300
-  .actions
-    button
-      background-color: $gray-300
   main
     .participantContainer
       @include scroolbarLight()
@@ -67,17 +49,9 @@
       @include flex(center, space-between, row)
       width: 100%
 
-      .participantButton
-        @include flex(center, center, row)
-        gap: .5rem
-        border-radius: $default-radius
-        padding: .3rem 1rem
-
-        transition: background-color 0.2s ease
-        svg
-          margin-bottom: 2px
-          font-size: 1rem
-
+      button
+        max-width: 200px
+        margin-left: auto
       .search
         margin-top: .5rem
         width: 300px
