--- a/src/renderer/styles/global.sass
+++ b/src/renderer/styles/global.sass
@@ -1,10 +1,10 @@
 @use "./_util" as *
-// @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap')
-// @import url('https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@400;500;600;700&display=swap')
-// @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@400;500;600;700&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap')
 
 @font-face 
-  font-family: Helvetica
+  font-family: "Helvetica"
   src: url(FreeSans.ttf)
 
 *
@@ -12,9 +12,8 @@
   padding: 0
   box-sizing: border-box
 
-html
+body
   height: 100%
-  font-family: arial
 
 // @media (max-width: 1080px)
 //   html
@@ -26,8 +25,11 @@ html
 
 
 body, input, textarea, select, button
-  //font-family: arial
-  font-size: .9rem
+  font-family: "Helvetica"
+  font-weight: 400
+  font-size: .87rem
+  letter-spacing: .3px
+  
 
 
 body
