--- a/src/renderer/styles/global.sass
+++ b/src/renderer/styles/global.sass
@@ -1,11 +1,6 @@
 @use "./_util" as *
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap')
-@import url('https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@400;500;600;700&display=swap')
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap')
 
-@font-face 
-  font-family: "Helvetica"
-  src: url(FreeSans.ttf)
 
 *
   margin: 0
@@ -25,10 +20,9 @@ body
 
 
 body, input, textarea, select, button
-  font-family: "Helvetica"
+  font-family: "Open Sans", sans-serif
   font-weight: 400
   font-size: .87rem
-  letter-spacing: .3px
   
 
 
