--- a/src/renderer/components/Inputs/Input/styles.module.sass
+++ b/src/renderer/components/Inputs/Input/styles.module.sass
@@ -10,7 +10,6 @@
     background-color: $gray-700
     color: $white
 
-
 .input.light
   background-color: $gray-100
   input
@@ -29,6 +28,7 @@
     width: 100%
     border-radius: $default-radius
     max-height: 57px
+    position: relative
 
     span
       position: relative
@@ -40,7 +40,6 @@
       width: 100%
       padding: .6rem .7rem
       border-radius: $default-radius
-     
       margin-top: -5px
 
   .bar
@@ -69,8 +68,6 @@
 
   .messageError
     color: $red-100
-    
-    font-size: 1rem
     font-weight: 500
 
 
