--- a/src/renderer/components/Dropdown/styles.module.sass
+++ b/src/renderer/components/Dropdown/styles.module.sass
@@ -39,6 +39,7 @@
 .dropdown
   @include flex(center, center, row)
   width: 100%
+  max-width: 300px
   height: 100%
   gap: 2rem
   position: relative
@@ -51,6 +52,7 @@
     border-radius: $default-radius
     border-radius: $default-radius
     height: 100%
+    width: 100%
     
     .inputContainer
       @include flex(center, center, row)
@@ -60,8 +62,8 @@
 
       svg
         position: absolute
-        margin-top: 13px
-        right: 5px
+        margin-top: 15px
+        right: 5px 
         min-width: 25px
         min-height: 25px
         font-size: 3px !important
@@ -82,7 +84,6 @@
         height: 100%
 
         padding: 0 10px
-        
         
         background: transparent
         transition: background-color 0.2s ease
