--- a/src/renderer/pages/Auth/Login/Token/styles.module.sass
+++ b/src/renderer/pages/Auth/Login/Token/styles.module.sass
@@ -1,17 +1,28 @@
 @use '../../../../styles/_util' as *
 
+
+.blue
+  background-color: $blue-100 !important
+  &:hover
+    background-color: $blue-100-hover !important
+
 .token
   @include flex(center, center, column)
   width: 100%
   gap: 2rem
+
 
   form
     @include flex(center, center, column)
     width: 100%
     gap: 2rem
 
+    @media (max-height: 700px)
+      margin-top: 100px
+
     div
       width: 100%
+      position: relative
 
   .resendToken
     &:hover
