--- a/src/renderer/components/NewSidebar/WorkspaceSettingsMenu/styles.module.sass
+++ b/src/renderer/components/NewSidebar/WorkspaceSettingsMenu/styles.module.sass
@@ -57,7 +57,7 @@
 
       li
         width: 100%
-        margin-top: 1px
+        margin-top: 5px
 
         button
           @include flex(center, flex-start, row)
@@ -83,12 +83,14 @@
     height: 50px
 
     button
-      background-color: $red-100
+      @include flex(center  , flex-start, row)
       border-radius: $default-radius
       width: 100%
+      padding: 0 .5rem
 
-      height: 30px
+      svg
+        font-size: 1.1rem
 
-      &:hover
-        background-color: $red-100-hover
+
+
 
