--- a/src/renderer/pages/Workspace/ViewSafeBox/MainSafeBox/Users/styles.module.sass
+++ b/src/renderer/pages/Workspace/ViewSafeBox/MainSafeBox/Users/styles.module.sass
@@ -103,6 +103,12 @@
         margin-top: 1.5rem
         position: relative
 
+        >div
+          max-height: 40px
+
+          input
+            margin-top: 0
+
         &::before
           content: ''
           position: absolute
