--- a/src/renderer/pages/WorkspaceMembers/styles.module.sass
+++ b/src/renderer/pages/WorkspaceMembers/styles.module.sass
@@ -1,4 +1,4 @@
-@use '../../../../styles/_util' as *
+@use '../../styles/_util' as *
 
 // --------------------------------------------------------------
 // ---------------------------- THEME ---------------------------
