--- a/src/renderer/components/Modals/VerifySafetyPhraseModal/styles.module.sass
+++ b/src/renderer/components/Modals/VerifySafetyPhraseModal/styles.module.sass
@@ -5,31 +5,12 @@
   background-color: $gray-900
   h2
     color: $white
-  .buttons
-    button
-      background-color: $gray-700
-      color: $white
-      &:hover
-        background-color: $gray-600
-      &:last-child
-        &:hover
-            background-color: $red-100-hover
+
 
 .reactModalContent.light
   background-color: $white
   h2
     color: $black
-  .buttons
-    button
-      background-color: $gray-100
-      color: $black
-
-      &:last-child
-        color: $white
-        &:hover
-          background-color: $red-100-hover
-      &:hover
-        background-color: $gray-400
 
 .reactModalOverlay
   @include flex(center, center ,column)
@@ -56,12 +37,13 @@
   gap: 1rem
 
   h2
-    text-transform: uppercase
     font-weight: 600
+    font-size: 1.1rem
 
   form
     @include flex(center, center ,column)
     gap: 3rem
+
     >div
       width: 100%
 
@@ -70,18 +52,13 @@
       @include flex(center, center ,column)
       width: 100%
       gap: 1rem
-
-      button
-        text-transform: uppercase
-        font-weight: 500
-        width: 300px
-        height: 45px
-        border-radius: $default-radius
-        transition: background-color 0.2s ease
+      max-width: 300px
 
 
-        &:last-child
-          background-color: $red-100
+.red
+  background-color: $red-100 !important
+  &:hover
+    background-color: $red-100-hover !important
 
 
 
