--- a/src/renderer/pages/Workspace/ViewSafeBox/MainSafeBox/AddParticipantModal/styles.module.sass
+++ b/src/renderer/pages/Workspace/ViewSafeBox/MainSafeBox/AddParticipantModal/styles.module.sass
@@ -25,7 +25,7 @@
 
 .reactModalOverlay
   @include flex(center, center ,column)
-  z-index: 1000
+  z-index: 1002
   background: #000000a2
   position: fixed
   top: 0
@@ -51,7 +51,8 @@
     max-width: 300px
 
   h2
-    font-size: 1.2rem
+    font-weight: 600
+    font-size: 1.1rem
 
   .users
     @include flex(center, flex-start, column)
@@ -80,7 +81,7 @@
         position: absolute
         width: 95%
         height: 1px
-        bottom: -10px
+        bottom: -5px
 
         background-color: $gray-600
 
@@ -139,7 +140,10 @@
           width: 100%
 
           >div
-            height: 35px
+            max-height: 40px
+
+            input
+              margin-top: 0
 
           button
             height: 45px
