--- a/src/renderer/pages/WorkspaceSettings/styles.module.sass
+++ b/src/renderer/pages/WorkspaceSettings/styles.module.sass
@@ -1,6 +1,136 @@
 @use '../../styles/_util' as *
 
-.workspaceSettings
-  @include flex(flex-start, flex-start, row)
-  height: 100%
+.settings.dark
+  color: $white
+  @include scroolbarDark()
+.settings.light
+  color: $black
+  @include scroolbarLight()
+
+
+.settings
+  @include flex(flex-start, center, row)
   width: 100%
+  padding: 1rem
+  height: 100%
+  overflow: auto
+
+  
+
+  @media (max-width: 1100px)
+    button
+      max-width: 170px !important
+  .settingsContainer
+    width: 100%
+    max-width: 1100px
+
+    
+    .image
+      @include flex(flex-start, center, row)
+      width: 100%
+      gap: 1rem
+      position: relative
+
+      &::before
+        content: ''
+        position: absolute
+        width: 100%
+        height: 1px
+        background-color: $gray-400
+        bottom: -2rem
+      
+      img
+        max-width: 100px
+        border-radius: 5rem
+      .title
+        h3
+          margin-bottom: 3px
+        span
+          color: $gray-500
+      .actions
+        @include flex(center, center, column)
+        gap: 1rem
+        width: 200px
+        margin-left: auto
+
+        >div
+          width: 100%
+
+        .red
+          background-color: $red-100
+          &:hover
+            background-color: $red-100-hover
+
+            
+    .form
+      width: 100%
+      height: 100%
+      margin-top: 4rem
+      position: relative
+
+
+      form
+        @include flex(center, center, column)
+        width: 100%
+        height: 100%
+
+        gap: 1rem
+
+        .actions
+          @include flex(center, center, row)
+          width: 100%
+          max-width: 300px
+          gap: 1rem
+
+          .red
+            background-color: $red-100
+            &:hover
+              background-color: $red-100-hover
+
+    .separator
+      position: relative
+      color: $gray-500
+      margin-top: 2rem
+
+      span
+        font-size: 1rem
+
+      &::before
+        content: ''
+        position: absolute
+        width: 100%
+        height: 1px
+        bottom: 0px
+        top: 1.5rem
+        
+        background-color: $gray-400
+
+    .organizationActions
+      @include flex(center, center, column)
+      gap: 3rem
+      width: 100%
+      margin-top: 2rem
+      margin-bottom: 2rem
+      height: 240px
+
+      .item
+        @include flex(center, space-between, row)
+        width: 100%
+
+        h3
+          margin-bottom: 8px
+          font-weight: 400
+        .text
+          width: 100%
+          margin-right: 2rem
+        >div
+          width: 220px
+
+        button
+          max-width: 200px
+          margin-left: auto
+
+          background-color: $red-100
+
+          &:hover
+            background-color: $red-100-hover
