--- a/src/renderer/components/Buttons/Button/styles.module.sass
+++ b/src/renderer/components/Buttons/Button/styles.module.sass
@@ -8,6 +8,12 @@
   &:hover
     background-color: $red-100-hover !important
 
+.green
+  background-color: $green-100 !important
+
+  &:hover
+    background-color: $green-100-hover !important
+
 .button.dark
   svg
     color: $white
