--- a/src/renderer/components/Navbar/styles.module.sass
+++ b/src/renderer/components/Navbar/styles.module.sass
@@ -98,3 +98,8 @@
           font-size: 1.1rem
         &:first-child
           margin-left: 1rem
+
+      .notificated
+        position: relative
+        background-color: $red-100 !important
+       
