--- a/src/renderer/components/Navbar/components/NotificationModal/styles.module.sass
+++ b/src/renderer/components/Navbar/components/NotificationModal/styles.module.sass
@@ -21,7 +21,7 @@
   width: 100%
   height: 100%
 
-  max-width: 400px
+  max-width: 550px
   max-height: 300px
   color: $white
   overflow: auto
@@ -44,6 +44,7 @@
     height: 100%
     overflow: auto
     margin-top: 16px
+    gap: 1rem
 
     .notificationBox
       @include flex(flex-start, flex-start, row)
@@ -66,10 +67,16 @@
       .text
         @include flex(flex-start, flex-start, row)
         width: 100%
+        min-width: 340px
+      
       .actions
-        @include flex(flex-start, flex-start, column)
+        @include flex(center, flex-end, row)
         gap: 8px
         width: 100%
-        max-width: 150px
+
+        >div
+          max-width: 40px
+          width: 100%
+          
 
 
