--- a/src/renderer/components/Inputs/Input/styles.module.sass
+++ b/src/renderer/components/Inputs/Input/styles.module.sass
@@ -8,7 +8,9 @@
   background-color: $gray-700
   input
     background-color: $gray-700
-    color: $white
+    color: $white 
+    &::placeholder
+      color: $gray-500
 
 .input.light
   background-color: $gray-100
