--- a/src/renderer/components/Modals/VerifySafetyPhraseModal/styles.module.sass
+++ b/src/renderer/components/Modals/VerifySafetyPhraseModal/styles.module.sass
@@ -3,6 +3,7 @@
 
 .reactModalContent.dark
   background-color: $gray-900
+  color: $white
   h2
     color: $white
 
@@ -15,7 +16,7 @@
 .reactModalOverlay
   @include flex(center, center ,column)
   z-index: 4000
-  background: #41414187
+  background: #00000087
   position: fixed
   top: 0
   bottom: 0
