--- a/src/renderer/components/Sidebar/Icon/styles.module.sass
+++ b/src/renderer/components/Sidebar/Icon/styles.module.sass
@@ -6,7 +6,7 @@
     visibility: visible
     opacity: 1
     height: 40px
-    left: -24px
+    left: -22px
 
 .icon
   @include flex(center, center, row)
@@ -19,12 +19,12 @@
   &::before
     content: ''
     position: absolute
-    border-radius: $default-radius
+    border-radius: 100px
     left: -30px
     height: 20px
     display: inline-block
     padding: 10px
-    background-color: $white
+    background-color: $blue-100
     visibility: none
     opacity: 1
     transition: all 0.2s ease
@@ -34,7 +34,7 @@
     visibility: visible
     opacity: 1
     height: 40px
-    left: -24px
+    left: -22px
 
   button
     p
